# mcp-github-pr-reviewer

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  roadmap.md  security.md  usage.md
examples/: claude-desktop-config.json  codex-config.md  cursor-config.json  sample-pr-analysis.md
src/mcp_github_pr_reviewer/: __init__.py  config.py  server.py
src/mcp_github_pr_reviewer/models/: __init__.py  pull_request.py  responses.py
src/mcp_github_pr_reviewer/security/: policies.py
src/mcp_github_pr_reviewer/services/: diff_analyzer.py  github_service.py  llm_service.py
tests/: test_comment_on_pull_request.py  test_diff_analyzer.py  test_github_service.py  test_llm_service.py  test_policies.py  test_responses.py
