[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-github-pr-reviewer"
version = "0.1.0"
description = "MCP server for read-only GitHub pull request review assistance."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "Cosmess" }
]
dependencies = [
  "httpx>=0.27.0",
  "mcp>=1.0.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0",
]

[project.scripts]
mcp-github-pr-reviewer = "mcp_github_pr_reviewer.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_github_pr_reviewer"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
